# sisosign

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
sisosign/: sisosign.py
tests/: test_sisosign.py
