[tool.poetry]
name = "sisosign"
version = "0.3.2"
description = "A command-line tool for those times when you can't decide who should go."
authors = ["Eric Seidler <eric.seidler@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.3"
black = {version = "^21.7b0", allow-prereleases = true}

[tool.poetry.scripts]
sisosign = 'sisosign.sisosign:sisosign'

[tool.poetry.urls]
"Homepage" = "https://github.com/etseidler/sisosign"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
